--- a/model.qmd
+++ b/model.qmd
@@ -1,6 +1,6 @@
 ---
-title: "A model to identify ODA agreements targeting climate change mitigation"
-author: "Norad - Seksjon for Statistics and analysis"
+title: "A model to identify development aid agreements targetning climate change mitigation"
+author: "Norad - Section for statistics and analysis"
 format:
   html:
     code-fold: true
@@ -12,11 +12,11 @@ execute:
   enabled: false
 ---
 
-Here we build a model to identify ODA agreements targeting climate change mitigation. We build the model using supervised machine learning.
+We build a model to identify development agreements supporting developing countries in reducing greenhouse gas emmisions. The model is built using supervised machine learning.
 
 ## Load packages and data
 
-Lets start by loading the packages used in this document.
+Lets start by loading the packages.
 
 ```{r}
 #| label: load-packages
@@ -28,9 +28,7 @@ library(tidytext)
 library(stringr)
 library(textrecipes)
 library(themis)
-library(LiblineaR)
 library(ranger)
-library(xgboost)
 library(doParallel)
 library(noradstats)
 library(here)
@@ -39,9 +37,9 @@ library(knitr)
 
 ```
 
-Norwegian development aid statistics from 1960 onwards are available to download from [Access to microdata](https://resultater.norad.no/microdata). We select last ten years (2011-2021). These data can also be downloaded by using [this link](https://resultater.norad.no/api/microdata?from_year=2011&to_year=2021&main_region_code=&country_iso_code=&agreement_partner_group_sid=&agreement_partner_sid=&target_area_code=&dac_main_sector_code=&dac_sub_sector_code=&chapter_code=&format=csv&language=en). The csv file is saved in the the *data* folder in the project directory and named *Norad-Norwegian_development_assistance*.
+Norwegian development aid statistics (microdata) is publicly available to download [aidresults.no/microdata](https://resultater.norad.no/microdata). We select last five years (2013-2017). These data can also be downloaded by using [this link](https://resultater.norad.no/api/microdata?from_year=2011&to_year=2017&main_region_code=&country_iso_code=&agreement_partner_group_sid=&agreement_partner_sid=&target_area_code=&dac_main_sector_code=&dac_sub_sector_code=&chapter_code=&format=csv&language=en). The csv file is saved in the the *data* folder in the project directory and named *Norad-Norwegian_development_assistance.csv*.
 
-Let's import the csv file. We use the data for the years 2013-2018.
+Let's import the csv file. We use the data for the years 2013-2017.
 
 ```{r}
 #| label: load-data
@@ -52,15 +50,14 @@ df_oda <- df_oda |>
   filter(year %in% c(2013:2017))
 ```
 
-## Build a model
+## Selecting data
 
-The basic observation unit in the dataset are the individual agreements, identified by the unique agreement_number. Agreements can multi-year and also be financed from multiple budget lines. Therefore the basic observation unit is: agreement-by-budgetpost-by-year. An agreement can therefor be registrered multiple times in the dataset, if it is a multi-year agreement and/or the agreements is financed over multiple budget lines the same year.
+The development aid data contain information about the individual ddevelopment aid agreements. The unit of observations is agreement-year, and most agreements are multi-year agreements. The unique agreements can be identified using the variable *agreement_number*.
 
 **Unique agreement observations to avoid data leakage into the testing set**
 
-We want to avoid data leakage when training the model, meaning that we want to keep the training data separate from the testing data. However, this also means that we should only include unique agreement observations in the training/testing data. If not, statistical information for a multi-year agreement could be in included in both the tran set and the test set and then overestimate the models performance. The testing data would then not be really *new* data. We therefore include only one observation for each agreement in the training/testing data. For the time period 2013-2017 the total observations are X. However, when we only include unique agreement_numbers the number of unique agreement observations are redused to X.
+We want to avoid data leakage when training the model, meaning that we want to keep the training data separate from the testing data. We therefore chose to only include unique agreements (*agreement_numbers*) when training/testing the data. If not, statistical information for a multi-year agreement would be included in both the training set and the testing set, for example agreement1-year1 in the training set and agreement1-year2 in the testing set) and then overestimate the model performance on the testing set. The testing data would then not be really *new* data (agreements). We therefore include only one observation for each agreement in the training/testing data. For the time period 2013-2017 the total observations are X. However, when we only include unique agreement_numbers the number of unique agreement observations are redused to X.
 
-To train the model we want to include, identified by tha variable *agreement_number*.
 
 **Initial data transformation: outcome variable and predictors**
 
@@ -137,19 +134,19 @@ Let's set up our recipe for preprocessing.
 
 Preprocessing steps for the predictor variable *title_desc*:
 
--   We tokenize the title_desc variable using ordinary tokenization by splitting words by space. This creates a dummy variable for each token in the variable and count the presence of each token in each "document" (title_desc).
+-   We tokenize the *title_desc* variable using ordinary tokenization by splitting words by space. This creates a dummy variable for each token in the variable and count the presence of each token in each "document" (*title_desc*).
 -   We remove stopwords to eliminate words that are so commonly used that they carry very little useful information, like *a*, *the* and *is*.
--   We dont want to keep all the tokens, but keep the top 1000 used tokens.
--   We want to weight the token (word) counts by using TF-IDF (Text Frequency-Inverse Document Frequency) for each token. TF-IDF is a weight to measure the importance of a token in the document and corpus (collection of documents).
+-   We don't keep all of the tokens, but keep the top 1000 used tokens.
+-   We weight the token (word) counts by using TF-IDF (*Text Frequency-Inverse Document Frequency*) for each token. TF-IDF is a weight to measure the importance of a token in the document and corpus (collection of documents).
 
 Other preprocessing steps:
 
 -   We normalize all the numeric predictors as this is required in some models.
 -   We convert all character variables to factors. Both output and predictor variables. This is needed for some preprocessing steps.
--   The variables agreement_partner and implementing_partner have very many factor levels. We collapse less used partners in a "other"-level and specify a treshold for this level so that we keep only around 200 levels (partners).
+-   The variables *agreement_partner* and *implementing_partner* have a lot of factor levels. We collapse the less used partners in an *other*-level and specify a treshold for this level so that we keep only around 200 levels (partners).
 -   We convert all factor or character variables to binary numeric variables (dummy variables).
 -   We transform all the nominal predictors to factors by creating dummy variables. Also we specify that unseen factor levels will be assign with a new value. Also we deal with missing (unknown) data, and we remove factor levels with zero variance.
--   We handle the class imbalance in the outcome variable by using oversampling. Oversampling and undersampling can be helpful to deal with such class imbalanse to avoid poorly perfonmanse on the minority class. We oversample the "mitigation" level in the *mitigation* variable using the method *Synthetic Minority Over-sampling Technique (SMOTE)*.
+-   We handle the class imbalance in the outcome variable by using oversampling, to avoid poorly model perfonmanse on the minority class. We oversample the *mitigation* level in the outcome (*mitigation*) variable using the method *Synthetic Minority Over-sampling Technique (SMOTE)*.
 
 ```{r}
 #| label: recipe
@@ -185,18 +182,12 @@ Let's have a look at the training data after these preprocessing steps. The `rec
 
 ```
 
-Let's create a model specification for the model(s) we want to try. We are specifying three different models:
-
--   Random forest
-
--   Support vector machine
-
--   Gradient boosted trees
+Let's create a model specification for the model(s) we want to try. We are specifying a random forest model.
 
 ```{r}
 #| label: model-specs
 
-# Random forest
+# Random forest (without hyperparameter tuning)
 # rf_spec <- rand_forest(trees = 500) |>
 #   set_mode("classification") |>
 #   set_engine("ranger")
@@ -220,7 +211,7 @@ We build a model workflow where we put both the data recipe for preprocessing an
 ```{r}
 #| label: model-workflow
 
-# Random forest
+# Random forest (without hyperparameter tuning)
 # rf_wf <- workflow() |>
 #   add_recipe(oda_rec) |>
 #   add_model(rf_spec)
@@ -233,12 +224,12 @@ rf_wf_tune <- workflow() |>
 
 ## Fit a model
 
-We fit the model workflow (preprocessing and model) on the training set (using resampling).
+We fit the model workflow (preprocessing and model) on the training set using resampling.
 
 ```{r}
 #| label: resampling-results
 
-# Fit a random forest model
+# Fit a random forest model (without tuning hyperparameters)
 #
 # doParallel::registerDoParallel()
 # 
@@ -277,7 +268,7 @@ How did the model perform? Let's have a look at the resampling performance metri
 ```{r}
 #| label: resampling-metrics
 
-# Random forest
+# Random forest (without hyperparameter tuning)
 
 # rf_res_metrics <- collect_metrics(rf_res)
 # 
@@ -287,7 +278,7 @@ How did the model perform? Let's have a look at the resampling performance metri
 # rf_res_autoplot <- rf_res_truefalse |> 
 #   autoplot()
 
-# Random forest with hyperparameter tuning
+# Random forest (with hyperparameter tuning)
 collect_metrics(rf_tune_res)
 
 best_accuracy <- select_best(rf_tune_res, "accuracy")
@@ -295,11 +286,12 @@ best_accuracy <- select_best(rf_tune_res, "accuracy")
 
 ## Finalizing our model
 
-Finally, let's make a final workflow, and then fit and evaluate the model one last time. We use the function `last_fit()` to fit the final model on the full training data set and evaluates the finalized model on the testing data set. We just need to give this funtion our original train/test data split. This is the first time we have used the testing data. The purpose of the testing data is to estimate the model performance we expect to see with new data.
+Finally, let's make a final workflow, and then fit and evaluate the model one last time. We use the function `last_fit()` to fit the final model on the full training data set and evaluates the finalized model on the testing data set. We just need to give this funtion our original train/test data split (*oda_split*). This is the first time we have used the testing data. The purpose of the testing data is to estimate the model performance we expect to see with new data.
 
 ```{r}
 #| label: final-model
 
+# Fit final model
 # final_res <- last_fit(
 #   rf_wf,
 #   split = oda_split,
@@ -332,13 +324,11 @@ p_final_res <- final_res |>
   conf_mat(mitigation, .pred_class) |> 
   autoplot()
 
-#ggsave(here("figs", "p_final_res.png"))
-
 ```
 
 The performance metrics from the test set indicate that we did not overfit during the training procedure.
 
-![](figs/p_final_res.png){width="700"}
+<!-- ![](figs/p_final_res.png){width="700"} -->
 
 ## Make predictions using the workflow
 
